feat: add images

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     </div>
   </header>
   <main class="wrapper">
+    <section class="section hero-section">
+      
+    </section>
     Top sellers
   </main>
   <footer>
