feat: add basic layout

--- a/index.html
+++ b/index.html
@@ -17,10 +17,33 @@
     </div>
   </header>
   <main class="wrapper">
+    <h1>Click&Buy</h1>
     <section class="section hero-section">
-      
+      <h2>Main</h2>
+      <div class="hero-image"></div>
     </section>
-    Top sellers
+    <section class="section top-sellers-section">
+      <h2>Top sellers</h2>
+      <img src="./assets/images/image_1.jpg" alt="image 1">
+      <img src="./assets/images/image_2.jpg" alt="image 2">
+      <img src="./assets/images/image_3.jpg" alt="image 3">
+    </section>
+    <section class="section product-details-section">
+      <h2>Product details</h2>
+      <img src="./assets/images/image_1.jpg" alt="image 1">
+      <h3>Microsoft Surface Laptop 4</h3>
+      <p class="description">
+        Style and speed. Stand out on HD video calls backed by Studio Mics. Capture ideas on the vibrant touchscreen.
+      </p>
+      <button>Buy</button>      
+    </section>
+    <section class="section contact-form">
+      <h2>Contact us</h2>
+      <input type="text" placeholder="Your name" />
+      <input type="email" placeholder="Your email" />
+      <textarea placeholder="Your message"></textarea>
+      <button>Send</button>
+    </section>
   </main>
   <footer>
     <div class="wrapper">
