feat: add hamburger and slider

--- a/index2.html
+++ b/index2.html
@@ -13,46 +13,35 @@
       <div class="logo"></div>
       <nav class="nav-container">
         <ul class="menu">
-          <li class="nav-item"><a href="#main" class="nav-link">Main</a></li>
-          <li class="nav-item"><a href="#top-sellers" class="nav-link">Top Sellers</a></li>
-          <li class="nav-item"><a href="#product-details" class="nav-link">Product Details</a></li>
-          <li class="nav-item"><a href="#contact-us" class="nav-link">Contact Us</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Main</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Top Sellers</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Product Details</a></li>
+          <li class="nav-item"><a href="" class="nav-link">Contact Us</a></li>
         </ul>
       </nav>
-      
-      <div class="hamburger">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
 
     </div>
   </header>
   <main class="wrapper">
     <h1>IBuy</h1>
     <section class="section hero-section">
-      <h2 id="main">Main</h2>
+      <h2>Main</h2>
       <div class="hero-image"></div>
     </section>
     <section class="section top-sellers-section">
-      <h2 id="top-sellers">Top sellers</h2>
+      <h2>Top sellers</h2>
       <img src="./assets/images/image_1.jpg" alt="image 1">
       <img src="./assets/images/image_2.jpg" alt="image 2">
       <img src="./assets/images/image_3.jpg" alt="image 3">
     </section>
     <section class="section product-details-section">
-      <h2 id="product-details">Product details</h2>
+      <h2>Product details</h2>
       <div id="slider-container">
         <div id="slider" class="slider">
 
         </div>
       </div>
-      <div id="pagination" class="pagination">
-        <span class="page-dot" data-index="0"></span>
-        <span class="page-dot" data-index="1"></span>
-        <span class="page-dot" data-index="2"></span>
-        <span class="page-dot" data-index="3"></span>
-      </div>
+      
       <h3>Microsoft Surface Laptop 4</h3>
       <p class="description">
         Style and speed. Stand out on HD video calls backed by Studio Mics. Capture ideas on the vibrant touchscreen.
@@ -60,7 +49,7 @@
       <button>Buy</button>      
     </section>
     <section class="section contact-form">
-      <h2 id="contact-us">Contact us</h2>
+      <h2>Contact us</h2>
       <input type="text" placeholder="Your name" />
       <input type="email" placeholder="Your email" />
       <textarea placeholder="Your message"></textarea>
