--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper header-wrapper">
       <div class="logo"></div>
       <nav class="nav-container">
-        <ul class="menu">
+        <ul class="menu" id="nav-menu">
           <li class="nav-item"><a href="#main" class="nav-link">Main</a></li>
           <li class="nav-item"><a href="#top-sellers" class="nav-link">Top Sellers</a></li>
           <li class="nav-item"><a href="#product-details" class="nav-link">Product Details</a></li>
@@ -20,7 +20,7 @@
         </ul>
       </nav>
       
-      <div class="hamburger">
+      <div class="hamburger" id="ham-menu">
         <span class="bar"></span>
         <span class="bar"></span>
         <span class="bar"></span>
@@ -72,6 +72,6 @@
       Contact us
     </div>
   </footer> 
-  <script src="script.js"></script>
+  <script src="script.js" defer></script>
 </body>
 </html>
