--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
     </section>
     <section class="section product-details-section">
       <h2 id="product-details">Product details</h2>
-      <div id="slider-container">
-        <div id="slider" class="slider">
+      <div id="slider" class="slider"></div>
 
-        </div>
-      </div>
       <div id="pagination" class="pagination">
         <span class="page-dot" data-index="0"></span>
         <span class="page-dot" data-index="1"></span>
         <span class="page-dot" data-index="2"></span>
         <span class="page-dot" data-index="3"></span>
       </div>
+      
       <h3>Microsoft Surface Laptop 4</h3>
       <p class="description">
         Style and speed. Stand out on HD video calls backed by Studio Mics. Capture ideas on the vibrant touchscreen.
