adding new info

--- a/index.html
+++ b/index.html
@@ -53,11 +53,12 @@
         <span class="page-dot" data-index="2"></span>
         <span class="page-dot" data-index="3"></span>
       </div>
-      <h3>Microsoft Surface Laptop 4</h3>
-      <p class="description">
+      <h3 id="product-title">Microsoft Surface Laptop 4</h3>
+      <p class="product-description" class="description">
         Style and speed. Stand out on HD video calls backed by Studio Mics. Capture ideas on the vibrant touchscreen.
       </p>
-      <button>Buy</button>      
+      <p id="product-price" class="price">999,99$</p>
+      <button id="buy-btn" class="action-btn">Buy</button>      
     </section>
     <section class="section contact-form">
       <h2 id="contact-us">Contact us</h2>
