feat: add products functionality

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     </section>
     <section class="section top-sellers-section">
       <h2 id="top-sellers">Top sellers</h2>
-      <img src="./assets/images/image_1.jpg" alt="image 1">
-      <img src="./assets/images/image_2.jpg" alt="image 2">
-      <img src="./assets/images/image_3.jpg" alt="image 3">
+      <img src="./assets/images/image_1.jpg" alt="image 1" id="product-15">
+      <img src="./assets/images/image_2.jpg" alt="image 2" id="product-26">
+      <img src="./assets/images/image_3.jpg" alt="image 3" id="product-13">
     </section>
     <section class="section product-details-section">
       <h2 id="product-details">Product details</h2>
